--- a/html/main.html
+++ b/html/main.html
@@ -6,5 +6,37 @@
         </title>
         <head>
             <link href = "../css/main.css" rel = "stylesheet" type = "text/css">
+        </head>
+        <script type="text/javascript">
+            alert("Welcome to my Website! Press OK to continue.");
+        </script>
+        <h1>
+            About Me Website - Soham Sasan 
+        </h1>
+        <h2>
+            Written By: Soham Sasan (On 2022/03/15)
+        </h2>
+        <li>
+            Some JS Testing (Please click again to REFRESH): 
+            <button type="button"
+            onclick="document.getElementById('demo').innerHTML = Date()">
+            Click me to display Date and Time. 
+            </button>
+            <p id="demo"></p>
+            <script>
+                document.getElementById("demo").style.fontSize = "15px";
+                document.getElementById("demo").style.color = "white";
+                document.getElementById("demo").style.backgroundColor = "none";
+            </script>
+        </li>
+        <h3>
+            General Descripton: 
+            <li>
+                Hey there! I'm Soham Sasan, a 15-year-old who wishes to go into Data Science. 
+            </li>
+            <p>
+                <img src="../photos/IMG_3577.jpeg" width = 100 height = 120/>
+            </p>
+        </h3>
     </body>
 </html>
