--- a/html/captcha.html
+++ b/html/captcha.html
@@ -7,24 +7,13 @@
         Home - CAPTCHA Verification
     </title>
     <body>
-        <h5>
-            <fieldset>  
-                <legend>CAPTCHA Complete</legend>
-                <form action="../html/main.html" method="POST">
-                    <button for="notify-on">YES</button>
-                </form>
-                <form action="../html/captcha.html" method="POST">
-                    <button for="notify-off">NO</button>
-                </form>
-            </fieldset> 
-        </h5>
         <div class="center">
         <h1 id="captchaHeading">Captcha Validation</h1>
         <div id="captchaBackground">
         <canvas id="captcha">captcha text</canvas>
         <input id="textBox" type="text" name="text">
         <div id="buttons">
-        <input id="submitButton" type="submit">
+        <button id="submitButton" type="submit">Submit</button>
         <button id="refreshButton" type="submit">Refresh</button>
         </div>
         <span id="output"></span>
