--- a/html/main.html
+++ b/html/main.html
@@ -14,7 +14,7 @@
             About Me Website - Soham Sasan 
         </h1>
         <h2>
-            Written By: Soham Sasan (On 2022/03/15)
+            Written By: Soham Sasan (On 2022/03/22)
         </h2>
         <li>
             Some JS Testing (Please click again to REFRESH): 
@@ -30,13 +30,15 @@
             </script>
         </li>
         <h3>
-            General Descripton: 
+            General Descripton About Me: 
             <li>
-                Hey there! I'm Soham Sasan, a 15-year-old who wishes to go into Data Science. 
+                Hey there! I'm Soham Sasan, a 15-year-old who wishes to go into Data Science/Deep Learning. 
             </li>
             <p>
                 <img src="../photos/IMG_3577.jpeg" width = 100 height = 120/>
             </p>
+            <h4>
+            </h4>
         </h3>
     </body>
 </html>
