--- a/html/main.html
+++ b/html/main.html
@@ -35,6 +35,8 @@
                 Hey there! I'm Soham Sasan, a 15-year-old who wishes to go into Data Science/Deep Learning. 
             </li>
             <h4>
+                <object codetype="application/java" classid="java: mainFile.class"
+                archive="../java/mainFile.java" width="1000" height="500"></object>
             </h4>
         </h3>
     </body>
