--- a/html/vsc.html
+++ b/html/vsc.html
@@ -25,6 +25,9 @@ font-size: 60px;
     <h4>
         Code for timer from: https://www.geeksforgeeks.org/create-countdown-timer-using-javascript/
     </h4>
+    <h5>
+        <a href="../html/vsc(2).html" target="top">Main Website</a>
+    </h5>
 <p id="demo"></p>
 <script>
 var deadline = new Date("Oct 12, 2022 11:02:00").getTime();
