--- a/html/main.html
+++ b/html/main.html
@@ -2,42 +2,29 @@
 <html>
     <body>
         <title>
-            Home - My Website
+            Home - Main Website
         </title>
         <head>
             <link href = "../css/main.css" rel = "stylesheet" type = "text/css">
         </head>
         <script type="text/javascript">
-            alert("Welcome to my Website! Press OK to continue.");
+            alert("Welcome to Projekt Website Test. Press CLOSE to continue.");
         </script>
+        <a href="file:///Users/sohamsasan/Documents/GitHub/Website Test/html/vsc.html">*BETA* Back To Main</a>
         <h1>
-            About Me Website - Soham Sasan 
+            <u>Projekt Website</u> 
         </h1>
         <h2>
-            Written By: Soham Sasan (On 2022/03/22)
+            Written By Soham Sasan (on 2022/09/21)
         </h2>
-        <li>
-            Some JS Testing (Please click again to REFRESH): 
-            <button type="button"
-            onclick="document.getElementById('demo').innerHTML = Date()">
-            Click me to display Date and Time. 
-            </button>
-            <p id="demo"></p>
-            <script>
-                document.getElementById("demo").style.fontSize = "15px";
-                document.getElementById("demo").style.color = "white";
-                document.getElementById("demo").style.backgroundColor = "none";
-            </script>
-        </li>
         <h3>
-            General Descripton About Me: 
-            <li>
-                Hey there! I'm Soham Sasan, a 15-year-old who wishes to go into Data Science/Deep Learning. 
-            </li>
-            <h4>
-                <object codetype="application/java" classid="java: mainFile.class"
-                archive="../java/mainFile.java" width="1000" height="500"></object>
-            </h4>
+            Hey there! Welcome to the main website. The main navigation will be through links towards the top of the page. 
         </h3>
+        <h4>
+            <p>
+                <a href="../java/TicTacToeCode.java">*BROKEN* Launch Java</a>
+            </p>
+        </h4>
+        
     </body>
 </html>
